@@ -49,40 +49,111 @@
 Grid *gridDumpBentEdgesForPX(Grid *grid, int order, char *filename)
 {
   int conn, total;
+  int parent;
   int midnode;
-  int nodes[2];
+  int nodes[3];
   double xyz[3];
+  double uv[2], uv0[2], uv1[2], uv2[2];
+  double t, t0, t1;
+  double s, b0, b1, b2;
+  int face;
   FILE *file;
 
   gridCreateConn(grid);
   total = 0;
   for(conn=0;conn<gridNConn(grid);conn++) {
     gridConn2Node(grid,conn,nodes);
-    if (0 != gridParentGeometry(grid, nodes[0], nodes[1]) ) {
+    parent = gridParentGeometry(grid, nodes[0], nodes[1]);
+    if (0 != parent ) {
       total++;
     }
   }
-  total = total * (order-1);
 
-  printf("%d edges bent of %d total edges.",total,gridNConn(grid));
+  printf("%d edges bent of %d total edges.\n",total,gridNConn(grid));
   file = fopen(filename,"w");
-  fprintf(file,"%10d edges in 1-base numbering,\n",total);
+  fprintf(file,"%d geometry order\n",order);
+  fprintf(file,"%10d edges in 1-base numbering\n",total);
   
-  total = 0;
   for(conn=0;conn<gridNConn(grid);conn++) {
     gridConn2Node(grid,conn,nodes);
-    if (0 != gridParentGeometry(grid, nodes[0], nodes[1]) ) {
-      for (midnode=0;midnode<(order-1);midnode++) {
-	total++;
-	gridCurvedEdgeMidpoint(grid,nodes[0], nodes[1], xyz);
-	fprintf(file,"%10d%10d%24.15e%24.15e%24.15e\n",
-		nodes[0]+1,nodes[1]+1,xyz[0],xyz[1],xyz[2]);
+    parent = gridParentGeometry(grid, nodes[0], nodes[1]);
+    if ( 0 < parent ) { /* bend edge in interior of face */
+      fprintf(file,"%10d%10d",nodes[0]+1,nodes[1]+1);
+      gridNodeUV(grid, nodes[0], parent, uv0);
+      gridNodeUV(grid, nodes[1], parent, uv1);
+      for (midnode=1;midnode<order;midnode++) {
+	s = ((double)midnode) / ((double)order);
+	uv[0] = s*uv1[0] + (1.0-s)*uv0[0];
+	uv[1] = s*uv1[1] + (1.0-s)*uv0[1];
+	gridEvaluateOnFace(grid, parent, uv, xyz );
+	fprintf(file,"%24.15e%24.15e%24.15e",xyz[0],xyz[1],xyz[2]);
+      }
+      fprintf(file,"\n");
+    }
+    if ( 0 > parent ) { /* bend edge on CAD edge */
+      fprintf(file,"%10d%10d",nodes[0]+1,nodes[1]+1);
+      gridNodeT(grid, nodes[0], -parent, &t0);
+      gridNodeT(grid, nodes[1], -parent, &t1);
+      for (midnode=1;midnode<order;midnode++) {
+	s = ((double)midnode) / ((double)order);
+	t = s*t1 + (1.0-s)*t0;
+	gridEvaluateOnEdge(grid, -parent, t, xyz );
+	fprintf(file,"%24.15e%24.15e%24.15e",xyz[0],xyz[1],xyz[2]);
+      }
+      fprintf(file,"\n");
+    }
+  }
+  gridEraseConn(grid);
+
+  if (order>2) {
+    fprintf(file,"%10d faces in 1-base numbering\n",gridNFace(grid));
+    for (face = 0; face < gridMaxFace(grid) ; face++) {
+      if (grid == gridFace(grid, face, nodes, &parent)) {
+	fprintf(file,"%10d%10d%10d",nodes[0]+1,nodes[1]+1,nodes[2]+1);
+	gridNodeUV(grid, nodes[0], parent, uv0);
+	gridNodeUV(grid, nodes[1], parent, uv1);
+	gridNodeUV(grid, nodes[2], parent, uv2);
+	switch (order) {
+	case 3: 
+	  b0 = b1 = b2 = 1.0/3.0;
+	  uv[0] = b0*uv0[0] + b1*uv1[0] + b2*uv2[0];
+	  uv[1] = b0*uv0[1] + b1*uv1[1] + b2*uv2[1];
+	  gridEvaluateOnFace(grid, parent, uv, xyz );
+	  fprintf(file,"%24.15e%24.15e%24.15e",xyz[0],xyz[1],xyz[2]);
+	  fprintf(file,"\n");
+	  break;
+	case 4:
+	  b0 = 0.5;
+	  b1 = b2 = 0.25;
+	  uv[0] = b0*uv0[0] + b1*uv1[0] + b2*uv2[0];
+	  uv[1] = b0*uv0[1] + b1*uv1[1] + b2*uv2[1];
+	  gridEvaluateOnFace(grid, parent, uv, xyz );
+	  fprintf(file,"%24.15e%24.15e%24.15e",xyz[0],xyz[1],xyz[2]);
+	  b1 = 0.5;
+	  b0 = b2 = 0.25;
+	  uv[0] = b0*uv0[0] + b1*uv1[0] + b2*uv2[0];
+	  uv[1] = b0*uv0[1] + b1*uv1[1] + b2*uv2[1];
+	  gridEvaluateOnFace(grid, parent, uv, xyz );
+	  fprintf(file,"%24.15e%24.15e%24.15e",xyz[0],xyz[1],xyz[2]);
+	  b2 = 0.5;
+	  b0 = b1 = 0.25;
+	  uv[0] = b0*uv0[0] + b1*uv1[0] + b2*uv2[0];
+	  uv[1] = b0*uv0[1] + b1*uv1[1] + b2*uv2[1];
+	  gridEvaluateOnFace(grid, parent, uv, xyz );
+	  fprintf(file,"%24.15e%24.15e%24.15e",xyz[0],xyz[1],xyz[2]);
+	  fprintf(file,"\n");
+	  break;
+	default:
+	  printf("ERROR: gridDumpBentEdgesForPX: %s: %d: order %d %s\n",
+		 __FILE__, __LINE__, order, "not implemented yet" );
+	  return NULL;
+	  break;
+	}
       }
     }
   }
   fclose(file);
 
-  gridEraseConn(grid);
   return grid;
 }
 
@@ -96,9 +167,9 @@ int main( int argc, char *argv[] )
   char project[256];
   char outputProject[256];
   char filename[256];
-  double ratioSplit, ratioCollapse;
   int maxnode = 50000;
   int i;
+  int order = 2;
   int cycle, invalid;
   int iview;
   GridBool tecplotOutput = FALSE;
@@ -149,6 +220,9 @@ int main( int argc, char *argv[] )
     } else if( strcmp(argv[i],"-n") == 0 ) {
       i++; maxnode = atoi(argv[i]);
       printf("-n argument %d: %d\n",i, maxnode);
+    } else if( strcmp(argv[i],"-q") == 0 ) {
+      i++; order = atoi(argv[i]);
+      printf("-q argument %d: %d\n",i, order);
     } else if( strcmp(argv[i],"-t") == 0 ) {
       tecplotOutput = TRUE;
       printf("-t argument %d\n",i);
@@ -167,6 +241,7 @@ int main( int argc, char *argv[] )
 #endif
       printf(" -o output project name\n");
       printf(" -n max number of nodes in grid\n");
+      printf(" -q order of surface geometry bent files\n");
       printf(" -t write tecplot zones durring adaptation\n");
       printf(" -h help\n");
       return(0);
@@ -181,7 +256,8 @@ int main( int argc, char *argv[] )
 
   if(strcmp(project,"")==0)       sprintf(project,"default_project" );
 
-  if(strcmp(outputProject,"")==0) sprintf(outputProject,"%s_px", project );
+  if(strcmp(outputProject,"")==0) sprintf(outputProject,"%s_q%d", 
+					  project, order );
 
   printf("running project %s\n",project);
   grid = gridLoadPart( modeler, project, maxnode );
@@ -236,14 +312,16 @@ int main( int argc, char *argv[] )
   }else{
     // gridJacVolRatio(grid);
     STATUS;
-    printf("edge swapping grid...\n");gridSwap(grid,-1.0);
-    STATUS;
-    printf("node smoothing grid...\n");gridSmooth(grid,-1.0,-1.0);
-    STATUS;
-    printf("edge swapping grid...\n");gridSwap(grid,-1.0);
-    STATUS;
-    printf("node smoothing grid...\n");gridSmooth(grid,-1.0,-1.0);
-    STATUS;
+    if (order < 3) {
+      printf("edge swapping grid...\n");gridSwap(grid,-1.0);
+      STATUS;
+      printf("node smoothing grid...\n");gridSmooth(grid,-1.0,-1.0);
+      STATUS;
+      printf("edge swapping grid...\n");gridSwap(grid,-1.0);
+      STATUS;
+      printf("node smoothing grid...\n");gridSmooth(grid,-1.0,-1.0);
+      STATUS;
+    }
     // gridJacVolRatio(grid);
 
     sprintf(filename, "%s_midnodes.t", outputProject );
@@ -254,7 +332,7 @@ int main( int argc, char *argv[] )
 
     sprintf(filename,"%s.bent", outputProject );
     printf("dumping curved Tetrahedral sides to %s\n",filename);
-    gridDumpBentEdgesForPX(grid,2,filename);
+    gridDumpBentEdgesForPX(grid,order,filename);
   }
   printf("Done.\n");
   return 0;
